chore: updating CV info to up to date

--- a/index.html
+++ b/index.html
@@ -87,73 +87,71 @@
     <!--Experience-->
     <section class="m-auto">
         <h2 id="experience" class="h2 text-center mb-3 mt-3">EXPERIENCE</h2>
-        <div class="d-flex">
-            <div class="container col-6 m-auto">
-                <div class="container m-auto col-8 row">
-                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
-                        <div class="card-header h4 text-center">11/2018 - 01/2024</div>
-                        <div class="card-body">
-                            <h4 class="card-title">Software Group BG AD</h4>
-                            <h6 class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</h6>
-                            <p class="card-title">Positions:</p>
-                            <div class="container col-12 m-auto">
-                                <ul class="text-left m-1">
-                                    <ol class="text-left">Junior javascript full-stack developer - 2018-2019</ol>
-                                    <ol class="text-left">Middle javascript full-stack developer - 2019-2021</ol>
-                                    <ol class="text-left">Senior javascript full-stack developer - 2021-2023</ol>
-                                    <ol class="text-left">Team Lead / TDM - 2023-2024</ol>
-                                </ul>
-                            </div>
-                            <p class="card-title">Experience:</p>
-                            <div class="container col-12 m-auto">
-                                <ul class="text-left">
-                                    <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance.</li>
-                                    <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
-                                    <li class="text-left">Front and backend development with Javascript and Typescript.</li>
-                                    <li class="text-left">Javascript frameworks like: React, jQuery, Express.js.</li>
-                                    <li class="text-left">Building and consuming RESTful web APIs.</li>
-                                    <li class="text-left">Identity management and Directories.</li>
-                                    <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements.</li>
-                                    <li class="text-left">Working knowledge of front end optimization and performance techniques.</li>
-                                    <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications.</li>
-                                    <li class="text-left">Participated in introduction of new features for websites.</li>
-                                    <li class="text-left">Suggested and implemented new features for existing apps.</li>
-                                    <li class="text-left">Develop well structured, modular and clean JavaScript.</li>
-                                    <li class="text-left">Analyze, optimize, and improve the code base.</li>
-  
-                                </ul>
-                            </div>
+        <div class="container col-12 m-auto">
+            <div class="container m-auto col-6 row">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
+                    <div class="card-header h4 text-center">11/2018 - 01/2024</div>
+                    <div class="card-body">
+                        <h4 class="card-title">Software Group BG AD</h4>
+                        <h6 class="card-text">Software Group is a global technology company specialized in digitalization and integration solutions for financial service providers.</h6>
+                        <p class="card-title">Positions:</p>
+                        <div class="container col-12 m-auto">
+                            <ul class="text-left m-1">
+                                <ol class="text-left">Junior javascript full-stack developer - 2018-2019</ol>
+                                <ol class="text-left">Middle javascript full-stack developer - 2019-2021</ol>
+                                <ol class="text-left">Senior javascript full-stack developer - 2021-2023</ol>
+                                <ol class="text-left">Team Lead / TDM - 2023-2024</ol>
+                            </ul>
+                        </div>
+                        <p class="card-title">Experience:</p>
+                        <div class="container col-12 m-auto">
+                            <ul class="text-left">
+                                <li class="text-left">Developed insurance applications for clients as Generali, Euroins, and Atlantique Assurance.</li>
+                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
+                                <li class="text-left">Front and backend development with Javascript and Typescript.</li>
+                                <li class="text-left">Javascript frameworks like: React, jQuery, Express.js.</li>
+                                <li class="text-left">Building and consuming RESTful web APIs.</li>
+                                <li class="text-left">Identity management and Directories.</li>
+                                <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements.</li>
+                                <li class="text-left">Working knowledge of front end optimization and performance techniques.</li>
+                                <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications.</li>
+                                <li class="text-left">Participated in introduction of new features for websites.</li>
+                                <li class="text-left">Suggested and implemented new features for existing apps.</li>
+                                <li class="text-left">Develop well structured, modular and clean JavaScript.</li>
+                                <li class="text-left">Analyze, optimize, and improve the code base.</li>
+
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="container col-6">
-                <div class="container m-auto col-8 row">
-                    <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
-                        <div class="card-header h4 text-center">11/2024 to current</div>
-                        <div class="card-body">
-                            <h4 class="card-title">TINQIN AD</h4>
-                            <h6 class="card-text">TINQIN is a company focused on developing and delivering a wide range of innovative solutions mainly for the insurance industry.</h6>
-                            <p class="card-title">Positions:</p>
-                            <div class="container col-12 m-auto">
-                                <ul class="text-left m-1">
-                                    <ol class="text-left">FE developer with React.js - 2024 till current</ol>
-                                </ul>
-                            </div>
-                            <p class="card-title">Experience:</p>
-                            <div class="container col-12 m-auto">
-                                <ul class="text-left">
-                                    <li class="text-left">Developed insurance applications for clients as Be-ys trusted solutions.</li>
-                                    <li class="text-left">Developed, maintained and enhanced web services and technology platforms</li>
-                                    <li class="text-left">Front-end development with Javascript and Typescript</li>
-                                    <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements</li>
-                                    <li class="text-left">Working knowledge of front end optimization and performance techniques</li>
-                                    <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications</li>
-                                    <li class="text-left">Develop well structured, modular and clean JavaScript</li>
-                                    <li class="text-left">Analyze, optimize, and improve the code base</li>
-    
-                                </ul>
-                            </div>
+        </div>
+        <div class="container col-12 mt-5">
+            <div class="container m-auto col-6 row">
+                <div class="card text-black-50 border-success bg-white p-0 mx-auto mb-2">
+                    <div class="card-header h4 text-center">11/2024 to current</div>
+                    <div class="card-body">
+                        <h4 class="card-title">TINQIN AD</h4>
+                        <h6 class="card-text">TINQIN is a company focused on developing and delivering a wide range of innovative solutions mainly for the insurance industry.</h6>
+                        <p class="card-title">Positions:</p>
+                        <div class="container col-12 m-auto">
+                            <ul class="text-left m-1">
+                                <ol class="text-left">FE developer with React.js - 2024 till current</ol>
+                            </ul>
+                        </div>
+                        <p class="card-title">Experience:</p>
+                        <div class="container col-12 m-auto">
+                            <ul class="text-left">
+                                <li class="text-left">Developed insurance applications for clients as Be-ys trusted solutions.</li>
+                                <li class="text-left">Developed, maintained and enhanced web services and technology platforms.</li>
+                                <li class="text-left">Front-end development with Javascript and Typescript.</li>
+                                <li class="text-left">Work well in fast paced and Agile or Waterfall development environments and drive continuous improvements.</li>
+                                <li class="text-left">Working knowledge of front end optimization and performance techniques.</li>
+                                <li class="text-left">Expertise working as part of a team developing and delivering web-scale applications.</li>
+                                <li class="text-left">Develop well structured, modular and clean JavaScript.</li>
+                                <li class="text-left">Analyze, optimize, and improve the code base.</li>
+
+                            </ul>
                         </div>
                     </div>
                 </div>
