chore: updating CV info to up to date

--- a/index.html
+++ b/index.html
@@ -31,27 +31,12 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#experience">Experience</a>
-                </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="#specialities">Specialities</a>
-                </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#education">Education</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#certificates">Certificates</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
             </ul>
         </div>
     </nav>
@@ -63,12 +48,8 @@
             <img src="images/Nedelcho_Karageorgiev.jpg" alt="Nedelcho Karageorgiev"
                  class="rounded" style="width: 30%"/>
         </div>
-        <h1 class="h1 pt-3">
-            Nedelcho Karageorgiev
-        </h1>
-        <p class="text-success h5">
-            Software Developer - JavaScript Full-Stack Developer / Team Lead
-        </p>
+        <h1 class="h1 pt-3">Nedelcho Karageorgiev</h1>
+        <p class="text-success h5"> Software Developer - JavaScript Full-Stack Developer / Team Lead</p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p>
