chore: updating CV info to up to date

--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
         </p
         <p><b class="text-primary">Contact number:</b> +359877012349</p>
         <p>
-            Experienced software developer, proficient in FE and BE development of web based applications. A real team player,
-            that got used to bring the things to an end. Seven years of professional experience, focused on web development as well as communication with clients.
-            I am passionate about producing a well structured, readable and without any bugs code. The need of learning new skills and keeping up with the trends,
-            always makes me keen on about develop myself further. I have programming skills, as well as a sense for customer focus and team collaborations.
+           Experienced Full-Stack JavaScript Developer with 7+ years of professional experience in building and maintaining scalable web applications. 
+           Skilled in both front-end and back-end development, with expertise in React, Node.js, and TypeScript. 
+           A collaborative team player with proven leadership as a Team Lead, accustomed to delivering projects from concept to completion. Passionate about writing clean, maintainable code, optimizing performance, and continuously learning new technologies.
         </p>
     </section>
     <!--Experience-->
