chore: updating intrudaction part

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                  class="rounded" style="width: 30%"/>
         </div>
         <h1 class="h1 pt-3">Nedelcho Karageorgiev</h1>
-        <p class="text-success h5"> Software Developer - JavaScript Full-Stack Developer / Team Lead</p>
+        <p class="text-success h5"> Software Developer - JavaScript Full-Stack Developer</p>
         <hr>
         <p class="p-0 m-0"><b class="text-primary">Contact E-mail:</b> nedelcho.karageorgiev@gmail.com</p>
         <p class="p-0 m-0"><b class="text-primary">CV web page:</b><a href="https://nikiqta.github.io"> Nedelcho Dimitrov Karageorgiev</a></p>
@@ -61,7 +61,7 @@
         <p>
            Experienced Full-Stack JavaScript Developer with 7+ years of professional experience in building and maintaining scalable web applications. 
            Skilled in both front-end and back-end development, with expertise in React, Node.js, and TypeScript. 
-           A collaborative team player with proven leadership as a Team Lead, accustomed to delivering projects from concept to completion. Passionate about writing clean, maintainable code, optimizing performance, and continuously learning new technologies.
+           A collaborative team player with proven leadership skills, accustomed to delivering projects from concept to completion. Passionate about writing clean, maintainable code, optimizing performance, and continuously learning new technologies.
         </p>
     </section>
     <!--Experience-->
