feat: improving the whole CV page

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 <!-- UNIVERSAL CERTIFICATE MODAL -->
 <div class="modal fade" id="certificateModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-xl">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content position-relative">
       <button
         type="button"
