--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p class="m-0"><b class="text-primary">Phone:</b> +359 888 28 04 30</p>
           <p class="m-0">
             <b class="text-primary">Email:</b>
-            <a href="mailto:ned.jss.dev@gmail.com">ned.jss.dev@gmail.com</a>
+            <a href="mailto:nedelcho.karageorgiev@gmail.com">nedelcho.karageorgiev@gmail.com</a>
           </p>
           <p class="m-0">
             <b class="text-primary">LinkedIn:</b>
