feat: event list implementation

--- a/index.html
+++ b/index.html
@@ -545,13 +545,13 @@
             });
           }
         }
-        $(window).on("scroll", animateSkills);
-        animateSkills();
+        // $(window).on("scroll", animateSkills);
+        // animateSkills();
 
         // Load clicked certificate into modal
-        $("[data-cert]").on("click", function () {
-          $("#certificateModalImg").attr("src", $(this).data("cert"));
-        });
+        // $("[data-cert]").on("click", function () {
+        //   $("#certificateModalImg").attr("src", $(this).data("cert"));
+        // });
       });
     </script>
   </body>
