feat: event list implementation

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
                   Nedelcho Dimitrov Karageorgiev
                 </a>
               </p>
-              <!-- <p class="p-0 m-0">
+              <p class="p-0 m-0">
                 <b class="text-primary">CV web page:</b
                 ><a href="https://nikiqta.github.io">
                   Nedelcho Dimitrov Karageorgiev</a
                 >
-              </p> -->
+              </p>
             </div>
 
             <p class="mt-3">
