--- a/index.html
+++ b/index.html
@@ -302,7 +302,13 @@
             engineering.
           </p>
         </div>
-
+        <div class="card shadow-sm p-4 mb-4">
+          <h4 class="bold mb-1">
+            Kensington and Chelsea collage (London)
+          </h4>
+          <h6 class="text-primary">2014-2017</h6>
+          <p class="italic">Academical English courses.</p>
+        </div>
         <div class="card shadow-sm p-4 mb-4">
           <h4 class="bold mb-1">
             Vocational High School of Mechanical Engineering
