--- a/PDF_index.html
+++ b/PDF_index.html
@@ -186,7 +186,7 @@
                         <div class="progress-bar" style="width: 85%"></div>
                     </div>
 
-                    <p class="ms-2">React.js, React Router</p>
+                    <p class="ms-2">React.js, React Router, react-i18next</p>
                     <div class="progress ms-2 mb-3">
                         <div class="progress-bar" style="width: 90%"></div>
                     </div>
